--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+@import url(//fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap);
+body{
+  font-family: 'Open Sans Condensed';
+}
 .App {
   text-align: center;
 }
