--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,10 @@ body{
   font-family: 'Open Sans Condensed';
   padding: 20px 60px;
 }
+a{
+   text-decoration: none;
+   color: black;
+}
 .App {
   text-align: center;
 }
