--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -5,6 +5,7 @@
     flex-direction: column;
     height: 350px;
     align-items: center;
+    position:relative;
     .image
     {
        width: 100%;
@@ -13,6 +14,26 @@
         background-position: center;
         margin-bottom: 10px;
     }
+    .custom-button
+	{
+	   width:80%;
+	   opacity:0.7;
+	   position:absolute;
+	   top:255px;
+	   display:none;
+	}
+	&:hover
+	{
+	   .image
+	   {
+	       opacity:0.8;
+	   }
+	   .custom-button
+	   {
+	      opacity:0.85;
+	      display:flex;
+	   }
+	}
 	.collection-footer 
 	{
 			display: flex;
@@ -30,5 +51,6 @@
 			   width:10%;
 			}
 	}
+
 }
 
