--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -6,17 +6,19 @@
   line-height: 50px;
   padding: 0 35px 0 35px;
   font-size: 15px;
-  background-color: black;
-  color: white;
+  background-color: white;
+  color: black;
   text-transform: uppercase;
   font-family: 'Open Sans Condensed';
   font-weight: bolder;
   border: none;
   cursor: pointer;
+  display:flex;
+  justify-content:center;
 
   &:hover {
-    background-color: white;
-    color: black;
+    background-color: black;
+    color: white;
     border: 1px solid black;
   }
   &.google-sign-in
@@ -29,5 +31,17 @@
         background-color:#357ae8;
         border:none;
      }
+  }
+  &.inverted
+  {
+       background-color: white;
+       color: black;
+       border: 1px solid black;
+       &:hover
+       {
+           background-color: black;
+           color: white;
+           border: none;
+       }
   }
 }
