--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -20,6 +20,13 @@
           display: flex;
           flex-direction: column;
           overflow: scroll;
+
+          .empty-message
+          {
+             font-size:18px;
+             font-weight:bold;
+             margin:50px auto;
+          }
  
 	}
 	button {
